support suffix Rx for regex condition